--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.3.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.applitools/eyes-selenium-java3 -->
+        <dependency>
+            <groupId>com.applitools</groupId>
+            <artifactId>eyes-selenium-java3</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 </project>
